--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                   Pourquoi&nbsp;?
                 </p>
                 <p class="show-for-small-only text-center textColor fs14 noHMargin">
-                  Scroller ou cliquer pour voir la suite
+                  Cliquer pour voir la suite
                 </p>
                 <p class="show-for-medium text-center textColor fs20 noHMargin">
                   Scroller ou cliquer pour voir la suite
@@ -728,8 +728,8 @@
     </div>
   </div>
 </div>
-<div id="thanks" class="answersContainer full lightBG" style="display: none;height: 100%; min-height: 100vh">
-  <div class="grid-y" style="width: 100%">
+<div id="thanks" class="answersContainer full lightBG" style="display: none; min-height: 100vh">
+  <div class="grid-y" style="width: 100%; height: 100%;">
     <div class="cell small-2 medium-3 large-4">
       <div class="grid-x align-bottom">
         <div class="cell small-4 padding30">
