--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
   </div>
   <div id="why" class="answersContainer full lightBG" style="visibility: hidden;">
     <div class="grid-y align-center" style="height: 100vh;" id="whyPart">
-      <div class="cell small-8 medium-8">
+      <div class="cell small-8 medium-7 large-6">
         <div class="grid-x align-center">
           <div class="cell small-12  medium-10 large-8">
             <p class="fs32 blueColor lh140 text-center show-for-large semiTitle" id="whyText">
