[**] fix partie pourquoi, reponse

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="grid-x">
     <div class="cell small-12 medium-7">
-      <div class="grid-x hPaddding50">
+      <div class="grid-x hPadding50">
         <div class="cell small-12 medium-11 medium-offset-1 large-10 large-offset-1">
           <p class="fs44 blueColor lh130 bBold hide-for-small-only title">
             Que pensez-vous de <br class="show-for-large">
@@ -545,7 +545,7 @@
       </a>
     </div>
   </div>
-  <div class="grid-x hPaddding50 align-center">
+  <div class="grid-x hPadding50 align-center">
     <div class="cell small-12 large-7 medium-8">
       <div class="" id="questionNbContainer">
         <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
@@ -690,29 +690,23 @@
       </div>
     </div>
   </div>
-  <div id="why" class="answersContainer full lightBG" style="visibility: hidden;">
-    <div class="grid-y align-center" style="height: 100vh;" id="whyPart">
-      <div class="cell small-8 medium-8 large-7">
-        <div class="grid-x align-center">
-          <div class="cell small-12  medium-10 large-8">
-            <p class="fs32 blueColor lh140 text-center show-for-large semiTitle" id="whyText">
-              Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
-              techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"> <br><br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
+  <div id="why" class="lightBG" style="visibility: hidden;">
+    <div class="grid-x align-center" id="whyPart">
+      <div class="cell small-12  medium-10 large-8">
+        <p class="fs32 blueColor lh140 text-center show-for-large semiTitle" id="whyText">
+          Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
+          techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
+          en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"> <br><br>Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
               vite en traitements efficaces pour chaque patient&nbsp;!</span>
-            </p>
-            <p class="blueColor lh140 text-center hide-for-large semiTitle fs28" id="whyText" style="margin-top: 30px">
-              Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
-              techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
-              en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"><br><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
+        </p>
+        <p class="blueColor lh140 text-center hide-for-large semiTitle fs28" id="whyText" style="margin-top: 30px">
+          Parce que l’ICM, situé au cœur de l’Hôpital de la Pitié-Salpêtrière, est un centre de recherche de renommée internationale où tous les moyens
+          techniques et humains sont réunis pour percer les mystères du cerveau. Chaque jour, 700 experts en neurosciences y travaillent main dans la main
+          en s’appuyant sur des plateformes technologiques de pointe. <span class="orangeColor"><br><br> Leur unique objectif&nbsp;: parvenir à de nouvelles découvertes et les transformer au plus
               vite en traitements efficaces pour chaque patient&nbsp;!</span>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="cell auto">
-        <div class="grid-x align-center">
-          <div class="cell small-10 large-4 medium-8">
+        </p>
+        <div class="grid-x align-center hMargin50">
+          <div class="cell small-10 large-6 medium-8">
             <div class="grid-x align-center">
               <div class="cell">
                 <div class="orangeButton cliquable noHMargin" id="nextQuestion" onclick="changeQuestion(true);showOverflow()">
