--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
                   VALIDER
                 </p>
               </div>
+              <div class="cell small-12" style="margin-bottom: 10px; padding-left: 5px">
+                <p class="noHMargin redColor text-center fs20" id="formErrorMsg">
+                </p>
+              </div>
+
               <div class="reveal" id="modalPPD" data-reveal>
                 <h3 class="noHMargin greyColor fs30">
                   Politique de protection des données.
@@ -607,6 +612,7 @@
   <script src="js/vendor/foundation.js"></script>
   <script src="js/app.js"></script>
   <script src="js/utils.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
   <script>
     $(document).ready(function () {
