--- a/index.html
+++ b/index.html
@@ -413,13 +413,14 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Le présent site est la propriété de l’ICM, qui en est l'auteur au sens des articles L. 111.1 et suivants du Code de la propriété intellectuelle.
-                        Les photographies, textes, slogans, dessins, images, séquences animées sonores ou non ainsi que toutes œuvres intégrées dans le site sont la propriété
-                        de l’ICM ou de tiers ayant autorisé l’ICM à les utiliser. La reproduction, sur un support papier ou informatique, du site est autorisée sous réserve
-                        qu'elle soit strictement réservée à un usage personnel, excluant tout usage à des fins publicitaires et/ou commerciales et/ou d'informations,
-                        et qu'elle soit conforme aux dispositions de l'article L122-5 du Code de la Propriété Intellectuelle. A l'exception des dispositions ci-dessus,
-                        toute reproduction, représentation, utilisation ou modification, par quelque procédé que ce soit et sur quelque support que ce soit, de tout ou
-                        partie du site, de tout ou partie des contenus qui le composent, sans avoir obtenu l'autorisation préalable de l’ICM, est strictement interdite et constitue un délit de contrefaçon.
+                        Le présent site est la propriété de l’Institut du Cerveau et de la Moelle épinière, (ci-après « l’ICM).
+                        Les photographies, textes, slogans, dessins, images, séquences animées sonores ou non ainsi que toutes œuvres intégrées dans le
+                        site sont la propriété de l’ICM ou de tiers ayant autorisé l’ICM à les utiliser. La reproduction, sur un support papier ou informatique,
+                        du site est autorisée sous réserve qu'elle soit strictement réservée à un usage personnel, excluant tout usage à des fins publicitaires et/ou
+                        commerciales et/ou d'informations, et qu'elle soit conforme aux dispositions de l'article L122-5 du Code de la Propriété Intellectuelle.
+                        A l'exception des dispositions ci-dessus, toute reproduction, représentation, utilisation ou modification, par quelque procédé que ce soit et
+                        sur quelque support que ce soit, de tout ou partie du site, de tout ou partie des contenus qui le composent, sans l'autorisation préalable de
+                        l’ICM, est strictement interdite et constitue un délit de contrefaçon.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
@@ -427,10 +428,11 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Aucune information personnelle n'est collectée à votre insu. Aucune information personnelle n'est cédée à des tiers. Vous pouvez consulter ce site sans
-                        révéler votre identité ou donner la moindre information vous concernant. Les informations que vous nous communiquerez seront traitées selon les dispositions
-                        légales applicables et notamment de la Loi "Informatique et Libertés" n°78-17 du 6 janvier 1978. <a data-open="modalPPD">Notre politique de protection des données personnelles </a>vous
-                        renseigne en détail sur les finalités de notre collecte des données et des fondements juridiques sur lesquels celle-ci s'appuie.
+                        Aucune information personnelle n'est collectée à votre insu. Aucune information personnelle n'est cédée à des tiers.
+                        Vous pouvez consulter ce site sans révéler votre identité ou donner la moindre information vous concernant.
+                        Les informations que vous nous communiquerez seront traitées selon les dispositions légales applicables et notamment de la Loi
+                        "Informatique et Libertés" n°78-17 du 6 janvier 1978. <a data-open="modalPPD">Notre politique de protection des données personnelles</a> vous renseigne en
+                        détail sur les finalités de notre collecte des données et des fondements juridiques sur lesquels celle-ci s'appuie.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
@@ -438,12 +440,12 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Lors de votre visite sur notre site, nous sommes susceptibles d'implanter un cookie dans votre ordinateur. Un cookie est un petit bloc de données envoyé
-                        à votre navigateur par un serveur web et stocké sur le disque dur de votre ordinateur. Le cookie ne nous permet pas de vous identifier personnellement.
-                        De manière générale, il nous permet d'enregistrer des informations relatives à la navigation de votre ordinateur sur notre site (les pages que vous avez consultées,
-                        la date et l'heure de la consultation, etc.) que nous pourrons lire lors de vos visites ultérieures. Vous pouvez naturellement vous opposer à l'enregistrement de
-                        cookies en configurant votre navigateur à partir des "Options" ou "Préférences" de celui-ci. Vous pouvez également supprimer les cookies à tout moment et individuellement
-                        en vous rapportant au manuel d'utilisation de votre ordinateur.
+                        Lors de votre visite sur notre site, nous sommes susceptibles d'implanter un cookie dans votre ordinateur. Un cookie est un petit bloc
+                        de données envoyé à votre navigateur par un serveur web et stocké sur le disque dur de votre ordinateur. Le cookie ne nous permet pas de
+                        vous identifier personnellement. De manière générale, il nous permet d'enregistrer des informations relatives à la navigation de votre
+                        ordinateur sur notre site (les pages que vous avez consultées, la date et l'heure de la consultation, etc.) que nous pourrons lire lors
+                        de vos visites ultérieures. Vous pouvez naturellement vous opposer à l'enregistrement de cookies en configurant votre navigateur à partir des
+                        "Options" ou "Préférences" de celui-ci. Vous pouvez également supprimer les cookies à tout moment et individuellement en vous rapportant au manuel d'utilisation de votre ordinateur.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
@@ -451,18 +453,24 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite. Faites votre demande à&nbsp;: contact@icm-institute.org.
-                        L’ICM ne peut en aucun cas être tenu pour responsable de la mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site
-                        <a href="http://grande-enquete.icm-institute.org/fr" target="_blank">http://grande-enquete.icm-institute.org/fr</a> et
-                        ne peut supporter aucune responsabilité sur le contenu disponible sur ces sites ou à partir de ces sites.
+                        La mise en place d'un lien hypertexte vers notre site nécessite une autorisation préalable écrite de l’ICM. Faites votre demande à&nbsp;:
+                        <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>. L’ICM ne peut en aucun cas être tenu pour responsable de la
+                        mise à disposition des sites qui font l'objet d'un lien hypertexte à partir du site de l’ICM et ne peut supporter aucune responsabilité
+                        sur le contenu disponible sur ces sites ou à partir de ces sites.
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
-                        Editeur
+                        L'Institut du Cerveau et de la Moelle épinière
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Ce site est édité par adfinitas, avec l'accord de l’ICM et pour le compte de l’ICM.
+                        fondation reconnue d’utilité publique
+                        <br>
+                        Hôpital Pitié-Salpêtrière, 47/83 boulevard de l’Hôpital <br>
+                        CS 21414 <br>
+                        75646 Paris Cedex 13 <br>
+                        Tel&nbsp;:&nbsp;+33&nbsp;(0)1&nbsp;57&nbsp;27&nbsp;40&nbsp;00 <br><br>
+                        <a href="mailto:contact@icm-institute.org">contact@icm-institute.org</a>
                         <br>
                     </p>
                     <h4 class="noHMargin fs24 greyColor">
@@ -551,7 +559,6 @@
                 <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
             </div>
             <p class="fs42 blueColor lh140 text-center bBold title" id="questionText">
-
                 <!--  Pensez-vous qu’il sera possible de guérir des pathologies comme la maladie d’Alzheimer par exemple d’ici 10 ans&nbsp;? -->
             </p>
         </div>
