--- a/index.html
+++ b/index.html
@@ -492,10 +492,7 @@
                         <br>
                     </h4>
                     <p class="noHMargin textColor fs12">
-                        Aucune information personnelle n'est collectée à votre insu. Aucune information personnelle n'est cédée à des tiers.
-                        Vous pouvez consulter ce site sans révéler votre identité ou donner la moindre information vous concernant.
-                        Les informations que vous nous communiquerez seront traitées selon les dispositions légales applicables et notamment de la Loi
-                        "Informatique et Libertés" n°78-17 du 6 janvier 1978. <a data-open="modalPPD">Notre politique de protection des données personnelles</a> vous renseigne en
+                       <a data-open="modalPPD">Notre politique de protection des données personnelles</a> vous renseigne en
                         détail sur les finalités de notre collecte des données et des fondements juridiques sur lesquels celle-ci s'appuie.
                         <br>
                     </p>
