[+] adding tracking pixel

--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
     </div>
 </div>
 <div id="thanks" class="answersContainer full lightBG" style="display: none; min-height: 100vh">
+    <div id="pixelTracking"></div>
     <div class="grid-y" style="width: 100%; height: 100%;">
         <div class="cell small-2 medium-3 large-4">
             <div class="grid-x align-bottom">
