--- a/index.html
+++ b/index.html
@@ -792,6 +792,29 @@
 <script src="js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/intlTelInput.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.2/js/utils.js"></script>
+<script async>
+    if(sessionStorage.getItem("idMbz") && sessionStorage.getItem("maild5") && sessionStorage.getItem("idcampagne")){
+        (function () {
+            var ZTR = document.createElement('script');
+            ZTR.src = ((location.protocol === 'https:') ? 'https:' : 'http:') + '//prz.mesopinions.com/tracking/add?idcampagne='+sessionStorage.getItem("idcampagne")+'&md5='+sessionStorage.getItem("maild5")+'&idmindbaz='+sessionStorage.getItem("idMbz")+'&client=icm';
+            var ZTRtag = document.getElementsByTagName('script')[0];
+            ZTRtag.parentNode.insertBefore(ZTR, ZTRtag); }())
+    }
+</script>
+<script>
+    function $_GE(e) {
+        var i = {};
+        return window.location.href.replace(location.hash, "").replace(/[?&]+([^=&]+)=?([^&]*)?/gi, function (e, a, t) {
+            i[a] = void 0 !== t ? t : ""
+        }), e ? i[e] ? i[e] : null : i
+    }
+    if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !sessionStorage.getItem("idcampagne")) {
+        var $_GET, idMbz = ($_GET = $_GE()).idMbz,
+            maild5 = $_GET.maild5,
+            idcampagne = $_GET.idcampagne;
+        idMbz && maild5 && idcampagne && (sessionStorage.setItem("idMbz", idMbz), sessionStorage.setItem("maild5", maild5), sessionStorage.setItem("idcampagne", idcampagne))
+    }
+</script>
 <script>
     $(document).ready(setSocial());
     window.addEventListener("resize", setSocial);
