[*] requete presque opérationelle

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             </a>
         </div>
     </div>
-    <div class="grid-x hPadding50 align-center">
+    <div class="grid-x align-center">
         <div class="cell small-12 large-7 medium-8">
             <div class="" id="questionNbContainer">
                 <p class="fs30 greyColor text-center"><span class="fs48 orangeColor" id="questionNb"><!--1--></span> / 3</p>
