[+] form without request

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ if (!sessionStorage.getItem("idMbz") && !sessionStorage.getItem("maild5") && !se
                             </p>
                         </div>
                     </div>
-                    <div class="orangeButton cliquable" id="formHeaderButton" onclick="showQuestions();openForm();setSocial();">
+                    <div class="orangeButton cliquable" id="formHeaderButton" onclick="openForm();setSocial();">
                         <p class="text-center">
                             JE RÉPONDS
                         </p>
