--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   J’ai lu la <a data-open="modalPPD" class="underline greyColor">politique de protection des données</a>, les <a data-open="modalML" class="underline greyColor">mentions légales </a>et en validant, j'accepte d'être contacté par email, téléphone ou tout autre moyen de communication par l’ICM. Vous pouvez vous désinscrire à tout moment des communications de l’ICM à l’aide des liens de désinscription.
                 </p>
               </div>
-              <div class="blueButton cliquable margin20 padding15" id="formHeaderButton" onclick="validateForm();" style="margin-top: 10px">
+              <div class="blueButton cliquable margin20 padding15" id="formHeaderButton" onclick="/*validateForm();*/" style="margin-top: 10px">
                 <p class="text-center noHMargin">
                   VALIDER
                 </p>
